--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
       border: 3px solid #fff;
     }
     .main-content {
-      margin-left: 300px;
       padding: 2rem;
+      transition: margin-left 0.3s ease;
+    }
+    @media(min-width: 992px) {
+      .main-content {
+        margin-left: 300px; /* só aplica no desktop */
+      }
+      footer.page-footer {
+        margin-left: 300px;
+      }
     }
     .banner {
       position: relative;
@@ -41,12 +49,18 @@
       background: rgb(8, 8, 8);
       color: white;
       padding: 10px 20px;
-      font-size: 2rem;
+      font-size: 1.6rem;
       font-weight: bold;
       border-radius: 8px;
       text-align: center;
     }
-    /* Projetos - grid estilo simples */
+    @media(max-width: 600px) {
+      .banner-text {
+        font-size: 1.2rem;
+        padding: 8px 12px;
+      }
+    }
+    /* Projetos */
     #projetos .info {
       font-size: 14px;
       margin-bottom: 10px;
@@ -70,7 +84,7 @@
     }
     #projetos .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 20px;
     }
     #projetos .card {
@@ -107,6 +121,7 @@
     }
     #projetos .links {
       display: flex;
+      flex-wrap: wrap;
       gap: 10px;
       margin-top: 10px;
     }
@@ -131,9 +146,6 @@
       background: #1e7e34;
     }
   </style>
-
-  <!-- Typed.js -->
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 <body>
 
@@ -160,10 +172,10 @@
   <!-- Main content -->
   <main class="main-content">
     <div class="banner">
-      <div class="banner-text">Hello World!
-        Eu sou um... <span class="typed"></span></div>
+      <div class="banner-text">Hello World! Eu sou um... <span class="typed"></span></div>
     </div>
 
+    <!-- Seções -->
     <section id="sobre" class="section scrollspy">
       <h5>Sobre mim</h5>
       <p>Farmacêutico pela UFSJ e pós-graduado em Assuntos Regulatórios pelo ICTQ. Atuo como Analista de Assuntos Regulatórios, desenvolvedor freelancer full stack e analista de dados, unindo ciência e tecnologia para criar soluções práticas e inovadoras.</p>
@@ -171,7 +183,7 @@
 
     <section id="resumo" class="section scrollspy">
       <h5>Resumo:</h5>
-      <p><strong>Formação:</strong> Farmacêutico (UFSJ,2023) e Pós-graduado em Assuntos Regulatórios (ICTQ, 2025) </p>
+      <p><strong>Formação:</strong> Farmacêutico (UFSJ,2023) e Pós-graduado em Assuntos Regulatórios (ICTQ, 2025)</p>
       <p><strong>Idiomas:</strong> Inglês técnico (leitura e escrita).</p>
     </section>
 
@@ -179,9 +191,9 @@
       <h5>Experiência</h5>
       <ul class="collection">
         <li class="collection-item">
-          <strong>Desevolvedor FullStack independente</strong> — MEI<br>
+          <strong>Desenvolvedor FullStack independente</strong> — MEI<br>
           <em>Set 2020 – Presente</em><br>
-          Desevnvolvimento de Softwares e Sites, incluindo automação de tarefas com Python, dashboards, relatórios e análise dados.
+          Desenvolvimento de Softwares e Sites, incluindo automação de tarefas com Python, dashboards, relatórios e análise dados.
         </li>
         <li class="collection-item">
           <strong>Analista de Assuntos Regulatórios Jr</strong> — Globo Pharma<br>
@@ -191,7 +203,7 @@
         <li class="collection-item">
           <strong>Estagiário de Assuntos Regulatórios</strong> — Globo Pharma<br>
           <em>Ago 2023 – Out 2023</em><br>
-              Auxílio nas atividades de Registro e pós-registro de medicamentos. Projeto de automação para monitoramento de publicações regulatórias.
+          Auxílio nas atividades de Registro e pós-registro de medicamentos. Projeto de automação para monitoramento de publicações regulatórias.
         </li>
       </ul>
     </section>
@@ -229,7 +241,7 @@
     </section>
   </main>
 
-  <footer class="page-footer blue darken-3" style="margin-left: 300px;">
+  <footer class="page-footer blue darken-3">
     <div class="container center-align">
       <span class="white-text">&copy; 2025 Diórger Bretas. Todos os direitos reservados.</span>
     </div>
@@ -237,8 +249,6 @@
 
   <!-- Materialize JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-  <!-- Typed.js -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
   <script>
@@ -289,12 +299,8 @@
             <h3>${repo.name}</h3>
             <p>${repo.description || 'Sem descrição'}</p>
             <div class="links">
-              <a href="${repo.html_url}" target="_blank" title="Ver no GitHub" class="github">
-                GitHub
-              </a>
-              ${repo.homepage ? `<a href="${repo.homepage}" target="_blank" title="Ver Demo" class="demo">
-                Demo
-              </a>` : ''}
+              <a href="${repo.html_url}" target="_blank" class="github">GitHub</a>
+              ${repo.homepage ? `<a href="${repo.homepage}" target="_blank" class="demo">Demo</a>` : ''}
             </div>
           </div>
         `;
@@ -319,7 +325,6 @@
       fetchRepos(true);
     }
 
-    // Inicializa o carregamento
     fetchRepos();
   </script>
 </body>
